tests/parse-fail/types_byte_literals_non_ascii.rs
fn main() {
    b'é';
    //~^ ERROR: byte constant must be ASCII. Use a \xHH escape for a non-ASCII byte
}
